Implement landing page and connection links

--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <link rel="stylesheet" href="assets/style.css">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway" />
+        <script defer src="assets/icons/all.js"></script>
         <title>Yash Gulati</title>
     </head>
 </html>
 
 <body>
-
-    <div id="particles-js"></div>
-    <script src="assets/particles.js"></script>
-    <script src="assets/app.js"></script>
+    <div class="container">
+        <div id="greeting">
+            <h1>Hi,</h1>
+            <h2>I am <span style="color: red">Yash</span></h2>
+            <h1>EEE under-grad at BITS Pilani, Pilani Campus.</h1>
+        </div>
+        <div id="particles-js">
+            <script src="assets/particles.js"></script>
+            <script src="assets/app.js"></script>
+        </div>
+            <a id="linkedin" href="https://www.linkedin.com/in/yash-gulati/" style="font-size: 24px;"><i class="fab fa-linkedin-in"></i></a>
+            <a id="github" href="https://github.com/atkins2000" style="font-size: 24px;"><i class="fab fa-github"></i></a>
+            <a id="facebook" href="https://www.facebook.com/divyash.gulati" style="font-size: 24px;"><i class="fab fa-facebook"></i></a>
+            <a id ="instagram" href="https://www.instagram.com/theyashgulati/" style="font-size: 24px;"><i class="fab fa-instagram"></i></a>  
+    </div> 
 </body>
