--- a/index.html
+++ b/index.html
@@ -15,15 +15,25 @@
         <div id="greeting">
             <h1>Hi,</h1>
             <h2>I am <span style="color: red">Yash</span></h2>
-            <h1>EEE under-grad at BITS Pilani, Pilani Campus.</h1>
+            <h1>EEE under-grad at BITS Pilani, Pilani Campus</h1>
         </div>
+        <img src="assets/me_landing.jpg" alt="My photo">
         <div id="particles-js">
             <script src="assets/particles.js"></script>
             <script src="assets/app.js"></script>
         </div>
+            <a id="mail" href="mailto:divyashg@gmail.com" style="font-size: 24px;"><i class="fas fa-envelope"></i></a>
             <a id="linkedin" href="https://www.linkedin.com/in/yash-gulati/" style="font-size: 24px;"><i class="fab fa-linkedin-in"></i></a>
             <a id="github" href="https://github.com/atkins2000" style="font-size: 24px;"><i class="fab fa-github"></i></a>
             <a id="facebook" href="https://www.facebook.com/divyash.gulati" style="font-size: 24px;"><i class="fab fa-facebook"></i></a>
             <a id ="instagram" href="https://www.instagram.com/theyashgulati/" style="font-size: 24px;"><i class="fab fa-instagram"></i></a>  
-    </div> 
+        <nav class="topnav">
+            <a class="active" href="#home">HOME</a>
+            <a id="about" href="#about">ABOUT</a>
+            <a id="blog" href="#blog">BLOG</a>
+        </nav>
+    </div>
+    <section id="about" class="about">
+        <div class="about-me container"></div>
+    </section>
 </body>
